--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <div class="container">
+        <div class="text text-center">
+            <p>Hi it's me Ariel i made this for fun and it just a prototype only me can use it XD</p>
+        </div>
         <div class="wrapper">
             <div class="card text-center" onclick="youtubeLink()">
                 <i class="fa-brands fa-youtube"></i>
@@ -19,17 +22,17 @@
             <div class="card text-center" onclick="instagramLink()">
                 <i class="fa-brands fa-instagram"></i>
                 <h4>Instagram</h4>
-                <p class="description">Ariel Daniel</p>
+                <p class="description">Sushibond</p>
             </div>
             <div class="card text-center" onclick="twitterLink()">
                 <i class="fa-brands fa-twitter"></i>
                 <h4>Twitter</h4>
-                <p class="description">Ariel Daniel</p>
+                <p class="description">duckariel</p>
             </div>
             <div class="card text-center" onclick="githubLink()">
                 <i class="fa-brands fa-github"></i>
                 <h4>Github</h4>
-                <p class="description">Ariel Daniel</p>
+                <p class="description">arieldaniel7</p>
             </div>
         </div>
     </div>
